<resources>
    <string name="app_name">Lifecycle Activity</string>
    <string name="learn_native_android">Learn Native Android</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya Akun?</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="login">Login</string>
</resources>